# backend-guayacanes

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/core/: admin.py  urls.py
apps/core/management/commands/: load_communes.py  load_neighborhoods.py
apps/core/migrations/: 0001_initial.py  0002_neighborhood_geom_nullable.py  0003_add_service_aspect_content.py
apps/core/models/: __init__.py  catalog.py  geography.py
apps/infra_servicios_publicos_urbaser/: admin.py  apps.py  receivers.py  serializers.py  signals.py  urls.py  views.py
apps/infra_servicios_publicos_urbaser/management/commands/: load_cutting_schedule.py  load_green_zones.py  load_sweeping.py  seed_complaints.py
apps/infra_servicios_publicos_urbaser/migrations/: 0001_initial.py  0002_greenzone_sweepingmacroroute_cuttingschedule_and_more.py  0003_add_sla_alert_commune_metric.py
apps/infra_servicios_publicos_urbaser/models/: __init__.py  auditoria.py  operaciones.py  veeduria.py
config/: urls.py
config/settings/: base.py  production.py
docs/: CONTEXT_GUYACANES.md  README.md  admin-guide.md  barrios-opciones.md  changelog-fase-a.md  demo-guide.md  entorno-python-gdal.md  estado-actual.md  estrategia-documentacion.md  frontend-changelog.md  geodatos.md  guia-dependencias.md  plan-accion-fase1.md  plan-demo-completo.md  rutas-y-servicios.md
docs/api/: README.md  guyacanes.postman_collection.json
docs/api/guyacanes.bruno/: bruno.json
docs/api/guyacanes.bruno/auditoria/: alerts-detail.bru  alerts-list.bru  (+2 more)
(+9 files in other folders)
